@@ -66,8 +66,8 @@ bool nfc_initiator_mifare_cmd(nfc_device_t* pnd, const mifare_cmd mc, const uint
   if (szParamLen) memcpy(abtCmd+2,(byte_t*)pmp,szParamLen);
 
   // Fire the mifare command
-  if (!nfc_initiator_transceive_dep_bytes(pnd,abtCmd,2+szParamLen,abtRx,&szRxLen)) {
-    nfc_perror (pnd, "nfc_initiator_transceive_dep_bytes");
+  if (!nfc_initiator_transceive_bytes(pnd,abtCmd,2+szParamLen,abtRx,&szRxLen)) {
+    nfc_perror (pnd, "nfc_initiator_transceive_bytes");
     return false;
   }
 
